Подправил после ревью. Спринт 12.